tests/run-make/git-pull-rebase-conflict/main.rust
enum E {
<<<<<<< HEAD //~ ERROR encountered diff marker
    Foo(u8),
=======
    Bar(i8),
>>>>>>> branch
}
